Scaffolded project with light-codegen
